<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Home">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/oval_shape"
        android:contentDescription="@string/bentuk_oval" />

    <TextView
        android:id="@+id/textView1"
        style="@style/HeadingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/sambutan"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView15" />

    <androidx.cardview.widget.CardView
        android:id="@+id/home_banner"
        android:layout_width="361dp"
        android:layout_height="125dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp"
        app:cardMaxElevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivHomeBanner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/banner"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/homerumah" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/textView2"
        style="@style/BodyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="55dp"
        android:text="@string/subtitle_home"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


    <TextView
        android:id="@+id/textView3"
        style="@style/HeadingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="255dp"
        android:text="@string/layanan"
        android:textSize="20sp"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView15" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="300dp"
        android:rowCount="1"
        android:columnCount="2"
        android:orientation="horizontal"
        android:columnOrderPreserved="false"
        android:useDefaultMargins="true">

        <LinearLayout
            android:id="@+id/layout_pembangunan_perbaikan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/image_pembangunan_perbaikan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/menu_renovasi"
                android:contentDescription="Pembangunan Perbaikan" />

            <TextView
                android:id="@+id/textView13"
                style="@style/BodyText"
                android:layout_width="178dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/menu_renovasi"
                android:textAlignment="center"
                android:textColor="@color/dark"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/btnRenovation"
                app:layout_constraintStart_toStartOf="@+id/btnRenovation"
                app:layout_constraintTop_toBottomOf="@+id/btnRenovation" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_harga"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/image_harga"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:contentDescription="Harga"
                android:src="@drawable/harga" />

            <TextView
                android:id="@+id/textView14"
                style="@style/BodyText"
                android:layout_width="178dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/harga"
                android:textAlignment="center"
                android:textColor="@color/dark"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/btnRenovation"
                app:layout_constraintStart_toStartOf="@+id/btnRenovation"
                app:layout_constraintTop_toBottomOf="@+id/btnRenovation" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_layananwa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/image_layananwa"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:contentDescription="Layanan WA"
                android:src="@drawable/layananwa" />

            <TextView
                android:id="@+id/textView15"
                style="@style/BodyText"
                android:layout_width="178dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/layananwa"
                android:textAlignment="center"
                android:textColor="@color/dark"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/btnRenovation"
                app:layout_constraintStart_toStartOf="@+id/btnRenovation"
                app:layout_constraintTop_toBottomOf="@+id/btnRenovation" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_tentang"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/image_tentang"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:contentDescription="Tentang Aplikasi"
                android:src="@drawable/tentang" />

            <TextView
                android:id="@+id/textView16"
                style="@style/BodyText"
                android:layout_width="178dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/tentang"
                android:textAlignment="center"
                android:textColor="@color/dark"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/btnRenovation"
                app:layout_constraintStart_toStartOf="@+id/btnRenovation"
                app:layout_constraintTop_toBottomOf="@+id/btnRenovation" />

        </LinearLayout>
    </GridLayout>
</FrameLayout>
